<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/registrationPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_registration"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="5dp"
        android:inputType="text"
        android:textSize="15sp"
        android:textColor="@color/darkblue"
        android:background="@color/sblue2"
        android:hint="@string/first_name"
        android:padding="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationPage"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="5dp"
        android:inputType="text"
        android:textSize="15sp"
        android:hint="@string/last_name"
        android:padding="12dp"
        android:textColor="@color/darkblue"
        android:background="@color/sblue2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationPage"
        android:autofillHints="name" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="1dp"
        android:inputType="textEmailAddress"
        android:textSize="15sp"
        android:hint="@string/label_email"
        android:padding="12dp"
        android:textColor="@color/darkblue"
        android:background="@color/sblue2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLastName"
        android:autofillHints="emailAddress" />

    <EditText
        android:id="@+id/etDOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:inputType="text"
        android:textSize="15sp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/label_DOB"
        android:padding="12dp"
        android:textColor="@color/darkblue"
        android:background="@color/sblue2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="25dp"
        android:inputType="phone"
        android:textSize="15sp"
        android:hint="@string/enter_phone_number"
        android:padding="12dp"
        android:textColor="@color/darkblue"
        android:background="@color/sblue2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        android:autofillHints="phone" />

    <EditText
        android:id="@+id/etAddressLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="1dp"
        android:inputType="textPostalAddress"
        android:textSize="15sp"
        android:hint="@string/label_address"
        android:padding="12dp"
        android:textColor="@color/darkblue"
        android:background="@color/sblue2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etCity"
        app:layout_constraintTop_toBottomOf="@+id/etPhone" />

    <EditText
        android:id="@+id/etCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="1dp"
        android:inputType="textPostalAddress"
        android:hint="@string/label_city"
        android:textSize="15sp"
        android:padding="12dp"
        android:textColor="@color/darkblue"
        android:background="@color/sblue2"
        app:layout_constraintStart_toEndOf="@+id/etAddressLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPhone"/>

    <EditText
        android:id="@+id/etState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="1dp"
        android:inputType="textEmailAddress"
        android:hint="@string/label_state"
        android:textSize="15sp"
        android:padding="12dp"
        android:textColor="@color/darkblue"
        android:background="@color/sblue2"
        app:layout_constraintEnd_toStartOf="@+id/etCountry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddressLine"/>

    <EditText
        android:id="@+id/etCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:inputType="textEmailAddress"
        android:hint="@string/label_country"
        android:textSize="15sp"
        android:padding="12dp"
        android:textColor="@color/darkblue"
        android:background="@color/sblue2"
        app:layout_constraintStart_toEndOf="@+id/etState"
        app:layout_constraintEnd_toStartOf="@+id/etZipcode"
        app:layout_constraintTop_toBottomOf="@+id/etAddressLine"/>

    <EditText
        android:id="@+id/etZipcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="1dp"
        android:inputType="textEmailAddress"
        android:hint="@string/label_zipcode"
        android:textSize="15sp"
        android:padding="12dp"
        android:textColor="@color/darkblue"
        android:background="@color/sblue2"
        app:layout_constraintStart_toEndOf="@+id/etCountry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddressLine"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="1dp"
        android:inputType="textEmailAddress"
        android:layout_marginEnd="25dp"
        android:hint="@string/label_username"
        android:textSize="15sp"
        android:padding="12dp"
        android:textColor="@color/darkblue"
        android:background="@color/sblue2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etZipcode"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="1dp"
        android:inputType="textPassword"
        android:layout_marginEnd="25dp"
        android:hint="@string/label_password"
        android:textSize="15sp"
        android:padding="12dp"
        android:textColor="@color/darkblue"
        android:background="@color/sblue2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername"
        android:autofillHints="password" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:inputType="textPassword"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="25dp"
        android:hint="@string/label_confirm_password"
        android:textSize="15sp"
        android:padding="12dp"
        android:textColor="@color/darkblue"
        android:background="@color/sblue2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginTop="5dp"
        android:text="@string/btn_register"
        android:textSize="15sp"
        android:backgroundTint="@color/darkblue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword"/>

    <TextView
        android:id="@+id/tvRedirect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/purple_700"
        android:textStyle="italic"
        android:text="@string/signInHint"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>