<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/loginwelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:minHeight="54dp"
        android:text="@string/hello_newbie"
        android:textColor="@color/darkblue"
        android:textSize="45sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:includeFontPadding="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:autofillHints="username"
        android:hint="@string/enter_username"
        android:inputType="text"
        android:minHeight="36dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/darkblue"
        android:background="@color/sblue2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginwelcome" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:includeFontPadding="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:autofillHints="username"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:minHeight="36dp"
        android:layout_marginTop="15dp"
        android:textColor="@color/darkblue"
        android:background="@color/sblue2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password" />


    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/label_sign_in"
        android:backgroundTint="@color/darkblue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_username"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/tvRedirect2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textColor="@color/purple_700"
        android:textStyle="italic"
        android:text="@string/registerHint"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_username"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="35dp"
        app:layout_constraintTop_toBottomOf="@+id/login_username"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/forgot_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="35dp"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        tools:ignore="UsingOnClickInXml" />

</androidx.constraintlayout.widget.ConstraintLayout>